# gym-mapf-new

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  gym-mapf.cpp  gym-mapf.h  killif.sh  main.cpp  real_benchmark.cpp  sanity_benchmark.cpp
.github/workflows/: push.yml
benchmark/: available_solvers_envs.cpp  available_solvers_envs.h  infra.cpp  infra.h  utils.cpp  utils.h
grid/: grid.cpp  grid.h
gym_mapf/: CMakeLists.txt  gym_mapf.cpp  gym_mapf.h
gym_mapf/grid/: grid.cpp  grid.h
gym_mapf/mapf_env/: goal_predicator.cpp  goal_predicator.h  mapf_env.cpp  mapf_env.h
gym_mapf/multiagent_action/: multiagent_action.cpp  multiagent_action.h
gym_mapf/multiagent_state/: multiagent_state.cpp  multiagent_state.h
gym_mapf/tests/: CMakeLists.txt  grid_test.cpp  mapf_env_tests.cpp  state_storage_tests.cpp  utils.h  utils_tests.cpp
gym_mapf/utils/: utils.cpp  utils.h
gym_mapf/utils/dictionary/: dictionary.cpp  dictionary.h
gym_mapf/utils/parsing/: parsing_utils.cpp  parsing_utils.h
gym_mapf/utils/state_storage/: state_storage.cpp  state_storage.h
mapf_env/: mapf_env.cpp  mapf_env.h
results/: analysis.ipynb  analysis.py  sanity_benchmark.py
results/.ipynb_checkpoints/: analysis-checkpoint.ipynb
results/after_bug/: empty_maze.csv  empty_maze.log.csv  room_ost_random.csv  room_ost_random.log.csv
results/more_statistics/: maze_sanity.csv  maze_sanity.log.csv
results/socs_results/: baseline_again.csv  berlin.csv  empty.csv  empty.log.csv  maze.csv  maze.log.csv  ost_longer_timeout.log.csv  ost_random.csv
results/vi/: baseline.log.csv  baseline_again.log.csv  berlin.log.csv  berlin_longer_timeout.csv  berlin_longer_timeout.log.csv  ost_longer_timeout.csv  ost_random.log.csv  room.log.csv
results/vi/.ipynb_checkpoints/: baseline-checkpoint.csv  room-checkpoint.csv
solvers/: CMakeLists.txt  solvers.cpp  solvers.h
solvers/dijkstra_baseline/: dijkstra_baseline.cpp  dijkstra_baseline.h
solvers/heuristics/: any_goal_heurisitc.cpp  any_goal_heurisitc.h  dijkstra_heuristic.cpp  dijkstra_heuristic.h  heuristic.cpp  heuristic.h  rtdp_dijkstra_heuristic.cpp  rtdp_dijkstra_heuristic.h  solution_sum_heuristic.cpp  solution_sum_heuristic.h
solvers/id/: id.cpp  id.h
solvers/online_replan/: online_replan.cpp  online_replan.h
solvers/online_window/: online_window.cpp  online_window.h
solvers/rtdp/: rtdp.cpp  rtdp.h
solvers/tests/: CMakeLists.txt  heuristics_tests.cpp  online_tests.cpp
solvers/utils/: utils.h
solvers/utils/conflict/: conflict.cpp  conflict.h
solvers/utils/policy/: crossed_policy.cpp  crossed_policy.h  policy.cpp  policy.h  value_function_policy.cpp  value_function_policy.h
solvers/utils/value_table/: value_table.cpp  value_table.h
solvers/value_iteartion/: value_iteration.cpp  value_iteration.h
tests/: grid_test.cpp  mapf_env_tests.cpp  utils_tests.cpp
utils/: utils.cpp
visualization/: CMakeLists.txt  main_visualize  main_visualize.cpp  visualization.cpp  visualization.h
